codex-rs/tui/src/bottom_pane/tests/snapshots/codex_tui__bottom_pane__tests__picker_hint_tests__popup_hint_picker.snap
---
source: tui/src/bottom_pane/tests/picker_hint_tests.rs
expression: rendered
---
                                                            
  Choose an action                                          
                                                            
                                                            
› 1. Continue                                               
                                                            
  f3 select · f2 back
